# Mainstage

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  TODO.md
.github/workflows/: build-c-plugin.yml
cli/: Cargo.toml  disasm.msxd  disasm_out.txt  dump_acyclic.txt  dump_ir.txt  dump_parser.txt  dump_semantic.txt  dumped_ast.txt  dumped_ir.txt  out.msx  sample_bytecode.msx  sample_ir.txt.msx
cli/samples/e2e/: 1.ms  2.ms  smoke.ms
cli/samples/sample1/: 1.ms  2.ms
cli/src/: disassembler.rs  main.rs  output.rs
cli/tests/: e2e.rs  run_sample.rs
core/: Cargo.toml
core/src/: error.rs  grammar.pest  lib.rs  location.rs  reports.rs  script.rs  vm.rs
core/tests/: ast_parser_roundtrip.rs  emit_control_and_bytecode.rs  emit_failing_bytecode.rs  failing_emit_bytecode.rs  ir_patch.rs  load_inprocess_plugin.rs  loop_lowering.rs  lowering.rs  lowering_calls.rs  lowering_forin.rs  lowering_loop_exhaustive.rs  opt_const_canon_extern_vis.rs  opt_plugin_preserve.rs  plugin_runtime_integration.rs  plugin_runtime_unknown.rs  read_glob_workdir.rs  template_test.rs  vm_abi_value_roundtrip.rs  vm_emit_and_run.rs  vm_util_read_glob_workdir.rs
docs/: GRAMMAR.md  HOST_FUNCTIONS.md  INPROCESS_PLUGIN.md  MSBC_SPEC.md
examples/: fmt_test.ms
examples/example_file_glob/: README.md  script.ms
examples/example_plugin_use/: README.md  script.ms
examples/example_stage/: README.md  script.ms
examples/example_workspace/: README.md  script.ms
examples/sample1/: dumped_ir.txt  script.ms
examples/simple_file_glob/: dumped_ir.txt  (+1 more)
scripts/: run_core_tests_by_category.ps1
(+153 files in other folders)
