[package]
name = "mainstage"
version = "0.1.0"
edition = "2024"

[dependencies]
mainstage_core = { path = "../core" }
clap = { version = "4.5.48", features = ["derive"] }
comfy-table = "7.2.1"
console = "0.16.1"
indicatif = "0.18.0"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", features = ["std"] }
